Task to run GIST1M benchmark was added.